--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 num-complex = "0.4.3"
 proconio = "0.4.3"
-itertools = "0.10.5"
+itertools = "0.11.0"
+rand = "0.8.5"
