--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 [dependencies]
 num-complex = "0.4.3"
 proconio = "0.4.3"
-itertools = "0.11.0"
+itertools = "0.12.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 permutohedron = "0.2.4"
+num = "0.4.1"
