--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,20 +3,19 @@ name = "atcoder"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-num-complex = "0.4.3"
-proconio = "0.4.3"
-itertools = "0.12.0"
-rand = "0.8.5"
-rand_chacha = "0.3.1"
-permutohedron = "0.2.4"
-num = "0.4.1"
-rand_pcg = "0.3.1"
-libm = "0.2.8"
+ac-library-rs = "0.1.1"
 bitset-fixed = "0.1.0"
-rustc-hash = "1.1.0"
-rand_core = "0.6.4"
 fixedbitset = "0.5.7"
+itertools = "0.14.0"
+libm = "0.2.11"
+num = "0.4.3"
+num-complex = "0.4.6"
 ordered-float = "4.6.0"
+permutohedron = "0.2.4"
+proconio = "0.5.0"
+rand = "0.9.0"
+rand_chacha = "0.9.0"
+rand_core = "0.9.0"
+rand_pcg = "0.9.0"
+rustc-hash = "2.1.1"
