--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,16 @@ edition = "2021"
 
 [dependencies]
 num-complex = "0.4.3"
-proconio = "0.4.3"
-itertools = "0.12.0"
-rand = "0.8.5"
-rand_chacha = "0.3.1"
+itertools = "0.14.0"
+rand = "0.9.0"
+rand_chacha = "0.9.0"
 permutohedron = "0.2.4"
 num = "0.4.1"
-rand_pcg = "0.3.1"
+rand_pcg = "0.9.0"
 libm = "0.2.8"
 bitset-fixed = "0.1.0"
-rustc-hash = "1.1.0"
-rand_core = "0.6.4"
+rustc-hash = "2.1.1"
+rand_core = "0.9.3"
 fixedbitset = "0.5.7"
-ordered-float = "4.6.0"
+ordered-float = "5.0.0"
+proconio = { version = "0.5.0", features = ["derive"] }
