--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,16 @@ edition = "2021"
 [dependencies]
 num-complex = "0.4.3"
 itertools = "0.14.0"
-rand = "0.9.0"
+rand = "0.9.2"
 rand_chacha = "0.9.0"
 permutohedron = "0.2.4"
 num = "0.4.1"
 rand_pcg = "0.9.0"
-libm = "0.2.8"
+libm = "0.2.15"
 bitset-fixed = "0.1.0"
 rustc-hash = "2.1.1"
 rand_core = "0.9.3"
 fixedbitset = "0.5.7"
-ordered-float = "5.0.0"
+ordered-float = "5.1.0"
 proconio = { version = "0.5.0", features = ["derive"] }
+cargo-snippet = "0.6.5"
